--- a/HW3.ipynb
+++ b/HW3.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -32,19 +32,20 @@
      "text": [
       "Building prefix dict from C:\\Users\\user\\Downloads\\OneDrive - 長庚大學\\桌面\\HW3\\dict.txt-v2.big ...\n",
       "Loading model from cache C:\\Users\\user\\AppData\\Local\\Temp\\jieba.uf23e018db859858015352f977000d85a.cache\n",
-      "Loading model cost 1.148 seconds.\n",
+      "Loading model cost 0.640 seconds.\n",
       "Prefix dict has been built successfully.\n"
      ]
     }
    ],
    "source": [
     "import csv\n",
+    "import jieba\n",
     "name = []\n",
     "briefIntro = []\n",
     "jieba.set_dictionary('dict.txt-v2.big')\n",
     "with open('./movies.csv',encoding='utf-8') as csvfile:\n",
     "    rows = list(csv.reader(csvfile)) #rows[0]為第0筆資料\n",
-    "    for row in rows[1:] : #第一列後的資料\n",
+    "    for row in rows[1:6001] : #第一列後的資料\n",
     "        name.append(row[1])\n",
     "        text = row[4]\n",
     "        jiebaText = ' '.join(jieba.cut(text, cut_all=False, HMM=True))\n",
@@ -53,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -89,58 +90,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'\\nnew_list = []\\ndef remove_stop_words(file_name,string1):\\n    with open(file_name,\\'r\\',encoding=\"utf-8\") as f:\\n        stop_words = f.readlines()\\n    stop_words = [stop_word.rstrip() for stop_word in stop_words]\\n  \\n    for seg in string1:\\n        if seg not in stop_words:\\n            if seg == \\'\\n\\':\\n                continue\\n            elif seg == \\'\\t\\':\\n                continue\\n            elif seg == \\' \\':\\n                continue \\n            elif seg == \\'。\\':\\n                continue  \\n            elif seg == \\'...\\':\\n                continue                  \\n            else:\\n                new_list.append(seg) #若在for loop裡用remove的話則會改變總長度\\n    return new_list\\n\\nfile_name = \\'./stopwords.txt\\'\\nstring1 = remove_stop_words(file_name,string1)\\n'"
-      ]
-     },
-     "execution_count": 69,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "\"\"\"\n",
-    "new_list = []\n",
-    "def remove_stop_words(file_name,string1):\n",
-    "    with open(file_name,'r',encoding=\"utf-8\") as f:\n",
-    "        stop_words = f.readlines()\n",
-    "    stop_words = [stop_word.rstrip() for stop_word in stop_words]\n",
-    "  \n",
-    "    for seg in string1:\n",
-    "        if seg not in stop_words:\n",
-    "            if seg == '\\n':\n",
-    "                continue\n",
-    "            elif seg == '\\t':\n",
-    "                continue\n",
-    "            elif seg == ' ':\n",
-    "                continue \n",
-    "            elif seg == '。':\n",
-    "                continue  \n",
-    "            elif seg == '...':\n",
-    "                continue                  \n",
-    "            else:\n",
-    "                new_list.append(seg) #若在for loop裡用remove的話則會改變總長度\n",
-    "    return new_list\n",
-    "\n",
-    "file_name = './stopwords.txt'\n",
-    "string1 = remove_stop_words(file_name,string1)\n",
-    "\"\"\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "arr = []\n",
-    "arr.append(bag_of_words)\n",
-    "df = pd.DataFrame(arr)\n",
+    "bagArr = []\n",
+    "bagArr.append(bag_of_words)\n",
+    "df = pd.DataFrame(bagArr)\n",
     "df.to_csv('bag_of_words.csv', encoding='utf_8_sig')\n",
     "\n",
     "# step 4\n",
@@ -151,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,19 +118,80 @@
     "tfidf_transformer.fit(X.toarray())\n",
     "# step 4\n",
     "tfidf = tfidf_transformer.transform(X)\n",
-    "arr = tfidf.toarray()\n",
-    "#arr"
+    "arr = tfidf.toarray()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 7,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "arr1 = arr[0:1500].tolist()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "MemoryError",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mMemoryError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-10-968ab0ccf31b>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0marr2\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0marr\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1500\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;36m3000\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtolist\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mMemoryError\u001b[0m: "
+     ]
+    }
+   ],
+   "source": [
+    "arr2 = arr[1500:3000].tolist()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arr3 = arr[3000:4500].tolist()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arr4 = arr[4500:6001].tolist()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "allArr = bagArr + arr1 + arr2 + arr3 + arr4\n",
+    "\n",
+    "#arr\n",
+    "#allArr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
-    "df = pd.DataFrame(arr)\n",
+    "df = pd.DataFrame(allArr)\n",
     "df.to_csv('arr.csv', encoding='utf_8_sig')\n",
     "\n",
     "#df"
