--- a/HW3.ipynb
+++ b/HW3.ipynb
@@ -30,9 +30,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Building prefix dict from C:\\Users\\user\\Downloads\\OneDrive - 長庚大學\\桌面\\HW3\\dict.txt-v2.big ...\n",
-      "Loading model from cache C:\\Users\\user\\AppData\\Local\\Temp\\jieba.uf23e018db859858015352f977000d85a.cache\n",
-      "Loading model cost 0.640 seconds.\n",
+      "Building prefix dict from D:\\temp\\dict.txt-v2.big ...\n",
+      "Loading model from cache C:\\Users\\YPLABG~1\\AppData\\Local\\Temp\\jieba.u27844e1f1f2ba7553ff203fe1af487bf.cache\n",
+      "Loading model cost 0.467 seconds.\n",
       "Prefix dict has been built successfully.\n"
      ]
     }
@@ -70,7 +70,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "135003\n"
+      "112143\n"
      ]
     }
    ],
@@ -134,28 +134,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "MemoryError",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mMemoryError\u001b[0m                               Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-10-968ab0ccf31b>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0marr2\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0marr\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1500\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;36m3000\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtolist\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mMemoryError\u001b[0m: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "arr2 = arr[1500:3000].tolist()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,11 +161,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "allArr = bagArr + arr1 + arr2 + arr3 + arr4\n",
+    "allArr = []\n",
+    "allArr = allArr + bagArr + arr1 + arr2 + arr3 + arr4\n",
     "\n",
     "#arr\n",
     "#allArr"
@@ -185,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,13 +185,6 @@
     "\n",
     "#df"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
