--- a/HW3.ipynb
+++ b/HW3.ipynb
@@ -166,10 +166,7 @@
    "outputs": [],
    "source": [
     "allArr = []\n",
-    "allArr = allArr + bagArr + arr1 + arr2 + arr3 + arr4\n",
-    "\n",
-    "#arr\n",
-    "#allArr"
+    "allArr = allArr + bagArr + arr1 + arr2 + arr3 + arr4"
    ]
   },
   {
@@ -181,9 +178,7 @@
     "import pandas as pd\n",
     "\n",
     "df = pd.DataFrame(allArr)\n",
-    "df.to_csv('arr.csv', encoding='utf_8_sig')\n",
-    "\n",
-    "#df"
+    "df.to_csv('arr.csv', encoding='utf_8_sig')"
    ]
   },
   {
@@ -195,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,126 +214,128 @@
     "target = []\n",
     "with open('./arr.csv', encoding='utf-8') as csvfile:\n",
     "    rows = list(csv.reader(csvfile))\n",
-    "    for row in rows[1:6001]:\n",
-    "        data.append(row[0:5])\n",
-    "        \n",
+    "    for row in rows[2:6002]:\n",
+    "        data.append(row[0:5])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "floatData = []        \n",
+    "for i in data:\n",
+    "    tempFloatData = []\n",
+    "    for x in i :\n",
+    "        tempFloatData.append(float(x))\n",
+    "    floatData.append(tempFloatData)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "with open('./movies.csv', encoding='utf-8') as csvfile:\n",
     "    rows = list(csv.reader(csvfile))\n",
     "    for row in rows[1:6001]:\n",
     "        level = row[3][:2]\n",
     "        if level == '犯罪':\n",
-    "            level = '0'\n",
+    "            level = 0\n",
     "        elif level == '奇幻':\n",
-    "            level = '1'\n",
+    "            level = 1\n",
     "        elif level == '冒險':\n",
-    "            level = '2'\n",
+    "            level = 2\n",
     "        elif level == '科幻':\n",
-    "            level = '3'            \n",
+    "            level = 3           \n",
     "        elif level == '紀錄':\n",
-    "            level = '4'            \n",
+    "            level = 4           \n",
     "        elif level == '音樂':\n",
-    "            level = '5'            \n",
+    "            level = 5            \n",
     "        elif level == '恐怖':\n",
-    "            level = '6'            \n",
+    "            level = 6            \n",
     "        elif level == '動作':\n",
-    "            level = '7'\n",
+    "            level = 7\n",
     "        elif level == '動畫':\n",
-    "            level = '8'            \n",
+    "            level = 8            \n",
     "        elif level == '喜劇':\n",
-    "            level = '9'            \n",
+    "            level = 9            \n",
     "        elif level == '愛情':\n",
-    "            level = '10'            \n",
+    "            level = 10           \n",
     "        elif level == '溫馨':\n",
-    "            level = '11'            \n",
+    "            level = 11            \n",
     "        elif level == '劇情':\n",
-    "            level = '12'            \n",
+    "            level = 12            \n",
     "        elif level == '影展':\n",
-    "            level = '13'            \n",
+    "            level = 13            \n",
     "        elif level == '戰爭':\n",
-    "            level = '14'\n",
+    "            level = 14\n",
     "        elif level == '歷史':\n",
-    "            level = '15'            \n",
+    "            level = 15            \n",
     "        elif level == '勵志':\n",
-    "            level = '16'            \n",
+    "            level = 16            \n",
     "        elif level == '懸疑':\n",
-    "            level = '17'      \n",
+    "            level = 17      \n",
     "        target.append(level)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
-    "iris=datasets.load_iris()\n",
-    "X=data\n",
+    "X=floatData\n",
     "y=target"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 265,
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train, X_test, y_train, y_test = train_test_split(X, y,test_size=0.01,random_state=1)"
+    "X_train, X_test, y_train, y_test = train_test_split(X, y,test_size=0.001,random_state=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 266,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\user\\anaconda3\\lib\\site-packages\\sklearn\\utils\\validation.py:72: FutureWarning: Beginning in version 0.22, arrays of bytes/strings will be converted to decimal numbers if dtype='numeric'. It is recommended that you convert the array to a float dtype before using it in scikit-learn, for example by using your_array = your_array.astype(np.float64).\n",
-      "  return f(**kwargs)\n",
-      "C:\\Users\\user\\anaconda3\\lib\\site-packages\\sklearn\\utils\\validation.py:72: FutureWarning: Beginning in version 0.22, arrays of bytes/strings will be converted to decimal numbers if dtype='numeric'. It is recommended that you convert the array to a float dtype before using it in scikit-learn, for example by using your_array = your_array.astype(np.float64).\n",
-      "  return f(**kwargs)\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "KNeighborsClassifier(algorithm='brute', n_neighbors=3, weights='distance')"
+       "KNeighborsClassifier(algorithm='brute', n_neighbors=7, weights='distance')"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 266,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "clf=KNeighborsClassifier(n_neighbors=3,p=2,weights='distance',algorithm='brute')\n",
+    "#n_neighbors=k\n",
+    "#p=2 歐基里德距離\n",
+    "#algorithm: 'auto'/'brute'/'kd_tree'/'ball_tree'\n",
+    "clf=KNeighborsClassifier(=7,p=2,weights='distance',algorithm='brute')\n",
     "clf.fit(X_train,y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 267,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\user\\anaconda3\\lib\\site-packages\\sklearn\\utils\\validation.py:72: FutureWarning: Beginning in version 0.22, arrays of bytes/strings will be converted to decimal numbers if dtype='numeric'. It is recommended that you convert the array to a float dtype before using it in scikit-learn, for example by using your_array = your_array.astype(np.float64).\n",
-      "  return f(**kwargs)\n",
-      "C:\\Users\\user\\anaconda3\\lib\\site-packages\\sklearn\\utils\\validation.py:72: FutureWarning: Beginning in version 0.22, arrays of bytes/strings will be converted to decimal numbers if dtype='numeric'. It is recommended that you convert the array to a float dtype before using it in scikit-learn, for example by using your_array = your_array.astype(np.float64).\n",
-      "  return f(**kwargs)\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "array(['0', '1', '1', '0', '2', '1', '2', '0', '0', '2', '1', '0', '2',\n",
-       "       '1', '1'], dtype='<U1')"
+       "array([12, 12, 12, 12, 12, 12])"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 267,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -349,70 +346,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 268,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\user\\anaconda3\\lib\\site-packages\\sklearn\\utils\\validation.py:72: FutureWarning: Beginning in version 0.22, arrays of bytes/strings will be converted to decimal numbers if dtype='numeric'. It is recommended that you convert the array to a float dtype before using it in scikit-learn, for example by using your_array = your_array.astype(np.float64).\n",
-      "  return f(**kwargs)\n",
-      "C:\\Users\\user\\anaconda3\\lib\\site-packages\\sklearn\\utils\\validation.py:72: FutureWarning: Beginning in version 0.22, arrays of bytes/strings will be converted to decimal numbers if dtype='numeric'. It is recommended that you convert the array to a float dtype before using it in scikit-learn, for example by using your_array = your_array.astype(np.float64).\n",
-      "  return f(**kwargs)\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "1.0"
+       "0.6666666666666666"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 268,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#準確率\n",
     "clf.score(X_test,y_test)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\user\\anaconda3\\lib\\site-packages\\sklearn\\utils\\validation.py:72: FutureWarning: Beginning in version 0.22, arrays of bytes/strings will be converted to decimal numbers if dtype='numeric'. It is recommended that you convert the array to a float dtype before using it in scikit-learn, for example by using your_array = your_array.astype(np.float64).\n",
-      "  return f(**kwargs)\n",
-      "C:\\Users\\user\\anaconda3\\lib\\site-packages\\sklearn\\utils\\validation.py:72: FutureWarning: Beginning in version 0.22, arrays of bytes/strings will be converted to decimal numbers if dtype='numeric'. It is recommended that you convert the array to a float dtype before using it in scikit-learn, for example by using your_array = your_array.astype(np.float64).\n",
-      "  return f(**kwargs)\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "1.0"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "clf.score(X_train,y_train)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
