--- a/HW3.ipynb
+++ b/HW3.ipynb
@@ -320,28 +320,8 @@
     "#n_neighbors=k\n",
     "#p=2 歐基里德距離\n",
     "#algorithm: 'auto'/'brute'/'kd_tree'/'ball_tree'\n",
-    "clf=KNeighborsClassifier(=7,p=2,weights='distance',algorithm='brute')\n",
+    "clf=KNeighborsClassifier(n_neighbors=7,p=2,weights='distance',algorithm='brute')\n",
     "clf.fit(X_train,y_train)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 267,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([12, 12, 12, 12, 12, 12])"
-      ]
-     },
-     "execution_count": 267,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "clf.predict(X_test)"
    ]
   },
   {
